Restructure java args