@@ -123,4 +123,4 @@ EXPOSE 8080 8081 8443 8843 8880 6789 10001/udp 3478/udp 1900/udp
 COPY entrypoint.sh /usr/local/bin/entrypoint.sh
 
 ENTRYPOINT [ "entrypoint.sh" ]
-CMD ["java", "-Xmx1024M", "-jar", "/usr/lib/unifi/lib/ace.jar", "start"]
+CMD ["java", "-Xmx1024M", "--add-opens", "java.base/java.time=ALL-UNNAMED", "-jar", "/usr/lib/unifi/lib/ace.jar", "start"]
